--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,6 +36,7 @@ html {
   background-image: url("../img/background_3.jpg");
   background-size: cover;
   background-position: center;
+  margin-top: 20px;
 }
 
 .header h1 {
