--- a/static/css/main.css
+++ b/static/css/main.css
@@ -152,7 +152,7 @@ a:hover {
 
   .menu-btn {
     font-size: 14px !important;
-    padding: 3% !important;
+    padding: 5% !important;
   }
 
   .gallery img {
@@ -224,7 +224,8 @@ a:hover {
   letter-spacing: 1px;
   transition: background-color 0.3s ease, border 0.3s ease;
   border-radius: 5px;
-  padding: 3%;
+  padding: 5%;
+  margin: 10px;
 }
 
 .menu-btn:hover {
